Fixed background and CV download button on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,7 @@
 body {
     font-family: "Raleway", sans-serif;
     line-height: 1.5;
+    background-color: white;
 }
 
 a {
